VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc1Up.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [56MB/2.258GB][  2%][=>                                                ][18.67MB/s]  [120MB/2.258GB][  5%][==>                                               ][30MB/s]  [176MB/2.258GB][  7%][===>                                              ][35.2MB/s]  [232MB/2.258GB][ 10%][=====>                                            ][38.67MB/s]  [296MB/2.258GB][ 12%][======>                                           ][42.29MB/s]  [352MB/2.258GB][ 15%][=======>                                          ][44MB/s]  [408MB/2.258GB][ 17%][========>                                         ][45.33MB/s]  [472MB/2.258GB][ 20%][==========>                                       ][47.2MB/s]  [520MB/2.258GB][ 22%][===========>                                      ][47.27MB/s]  [568MB/2.258GB][ 24%][============>                                     ][47.33MB/s]  [608MB/2.258GB][ 26%][=============>                                    ][46.77MB/s]  [648MB/2.258GB][ 28%][==============>                                   ][46.29MB/s]  [688MB/2.258GB][ 29%][==============>                                   ][45.87MB/s]  [728MB/2.258GB][ 31%][===============>                                  ][45.5MB/s]  [768MB/2.258GB][ 33%][================>                                 ][45.18MB/s]  [808MB/2.258GB][ 34%][=================>                                ][44.89MB/s]  [848MB/2.258GB][ 36%][==================>                               ][44.63MB/s]  [880MB/2.258GB][ 38%][===================>                              ][44MB/s]  [912MB/2.258GB][ 39%][===================>                              ][43.43MB/s]  [952MB/2.258GB][ 41%][====================>                             ][43.27MB/s]  [992MB/2.258GB][ 42%][=====================>                            ][43.13MB/s]  [1024MB/2.258GB][ 44%][======================>                           ][42.67MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][42.56MB/s]  [1.078GB/2.258GB][ 47%][=======================>                          ][42.46MB/s]  [1.117GB/2.258GB][ 49%][========================>                         ][42.37MB/s]  [1.148GB/2.258GB][ 50%][=========================>                        ][42MB/s]  [1.188GB/2.258GB][ 52%][==========================>                       ][41.93MB/s]  [1.227GB/2.258GB][ 54%][===========================>                      ][41.87MB/s]  [1.266GB/2.258GB][ 56%][============================>                     ][41.81MB/s]  [1.305GB/2.258GB][ 57%][============================>                     ][41.75MB/s]  [1.344GB/2.258GB][ 59%][=============================>                    ][41.7MB/s]  [1.383GB/2.258GB][ 61%][==============================>                   ][41.65MB/s]  [1.422GB/2.258GB][ 62%][===============================>                  ][41.6MB/s]  [1.461GB/2.258GB][ 64%][================================>                 ][41.56MB/s]  [1.492GB/2.258GB][ 66%][=================================>                ][41.3MB/s]  [1.531GB/2.258GB][ 67%][=================================>                ][41.26MB/s]  [1.57GB/2.258GB][ 69%][==================================>               ][41.23MB/s]  [1.609GB/2.258GB][ 71%][===================================>              ][41.2MB/s]  [1.648GB/2.258GB][ 72%][====================================>             ][41.17MB/s]  [1.688GB/2.258GB][ 74%][=====================================>            ][41.14MB/s]  [1.727GB/2.258GB][ 76%][======================================>           ][41.12MB/s]  [1.766GB/2.258GB][ 78%][=======================================>          ][41.09MB/s]  [1.805GB/2.258GB][ 79%][=======================================>          ][41.07MB/s]  [1.844GB/2.258GB][ 81%][========================================>         ][41.04MB/s]  [1.883GB/2.258GB][ 83%][=========================================>        ][41.02MB/s]  [1.922GB/2.258GB][ 85%][==========================================>       ][41MB/s]  [1.961GB/2.258GB][ 86%][===========================================>      ][40.98MB/s]  [2GB/2.258GB][ 88%][============================================>     ][40.96MB/s]  [2.039GB/2.258GB][ 90%][=============================================>    ][40.94MB/s]  [2.078GB/2.258GB][ 92%][==============================================>   ][40.92MB/s]  [2.117GB/2.258GB][ 93%][==============================================>   ][40.91MB/s]  [2.156GB/2.258GB][ 95%][===============================================>  ][40.89MB/s]  [2.195GB/2.258GB][ 97%][================================================> ][40.87MB/s]  [2.234GB/2.258GB][ 98%][=================================================>][40.86MB/s]  [2.258GB/2.258GB][100%][==================================================][41.29MB/s]  [2.258GB/2.258GB][100%][==================================================][41.29MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_42807/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_42807/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
